Fix phone alert width on mobile

--- a/src/component/data-modal.css
+++ b/src/component/data-modal.css
@@ -138,4 +138,8 @@
         background-color: var(--yellow);
         color: var(--white);
     }
+
+    #user-phoneNumber + .alert {
+        width: 100%;
+    }
 }
